<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/numberLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
	
	<EditText
	    android:id="@+id/number"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="numberDecimal" />
	
	<requestFocus />
	
	<LinearLayout
	    android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    >

	    <Button
	        android:id="@+id/btAdd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="50"
	        android:text="@string/add" />
	
		<Button
		    android:id="@+id/btRun"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="50"
		    android:enabled="false"
		    android:text="@string/run" />

	</LinearLayout>
	
	<TextView
	    android:id="@+id/numbersListInfo"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:text="@string/numbersListInfo"
	    android:visibility="invisible" />
	
	<TextView
	    android:id="@+id/numbersListCount"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right" />
	
	<ListView
	    android:id="@+id/numbersList"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	</ListView>

</LinearLayout>