<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProbabilityActivity" >

    <TextView
        android:id="@+id/sampleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
	
	<EditText
	    android:id="@+id/sample"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="numberSigned" />
	
	<requestFocus />
	
	<TextView
        android:id="@+id/successLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
	
	<EditText
	    android:id="@+id/success"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="numberDecimal" />
	
	<Button
	    android:id="@+id/btRun"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/run" />

</LinearLayout>